hand-out/src/Parser/.antlr/CParser.java
// Generated from c:/Users/23040/Documents/GitHub/compilation-project/hand-out/src/Parser/C.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, CHAR=2, SHORT=3, INT=4, LONG=5, FLOAT=6, DOUBLE=7, SIGNED=8, UNSIGNED=9, 
		STRUCT=10, TYPEDEF=11, EXTERN=12, STATIC=13, CONST=14, IF=15, ELSE=16, 
		WHILE=17, DO=18, FOR=19, CONTINUE=20, BREAK=21, RETURN=22, GOTO=23, LEFT_BRACKET=24, 
		RIGHT_BRACKET=25, LEFT_PAREN=26, RIGHT_PAREN=27, LEFT_BRACE=28, RIGHT_BRACE=29, 
		SEMI=30, COMMA=31, ASSIGN=32, STAR_ASSIGN=33, DIV_ASSIGN=34, MOD_ASSIGN=35, 
		PLUS_ASSIGN=36, MINUS_ASSIGN=37, PLUS_PLUS=38, MINUS_MINUS=39, PLUS=40, 
		MINUS=41, STAR=42, DIV=43, MOD=44, LESS=45, GREATER=46, LESS_EQUAL=47, 
		GREATER_EQUAL=48, EQUAL=49, NOT_EQUAL=50, NOT=51, AND_AND=52, OR_OR=53, 
		QUESTION=54, COLON=55, AND=56, DOT=57, ARROW=58, ELLIPSIS=59, Identifier=60, 
		Constant=61, CharacterConstant=62, StringLiteral=63, Whitespace=64, LineComment=65, 
		BlockComment=66;
	public static final int
		RULE_compilationUnit = 0, RULE_translationUnit = 1, RULE_functionDefinition = 2, 
		RULE_declaration = 3, RULE_declarationSpecifiers = 4, RULE_declarationSpecifier = 5, 
		RULE_storageClassSpecifier = 6, RULE_typeSpecifier = 7, RULE_typeQualifier = 8, 
		RULE_typedefName = 9, RULE_structSpecifier = 10, RULE_structDeclarationList = 11, 
		RULE_structDeclaration = 12, RULE_initDeclaratorList = 13, RULE_initDeclarator = 14, 
		RULE_declarator = 15, RULE_directDeclarator = 16, RULE_pointer = 17, RULE_typeQualifierList = 18, 
		RULE_parameterTypeList = 19, RULE_parameterList = 20, RULE_parameterDeclaration = 21, 
		RULE_initializer = 22, RULE_initializerList = 23, RULE_expression = 24, 
		RULE_assignmentExpression = 25, RULE_conditionalExpression = 26, RULE_logicalOrExpression = 27, 
		RULE_logicalAndExpression = 28, RULE_equalityExpression = 29, RULE_relationalExpression = 30, 
		RULE_additiveExpression = 31, RULE_multiplicativeExpression = 32, RULE_unaryExpression = 33, 
		RULE_unaryOperator = 34, RULE_postfixExpression = 35, RULE_primaryExpression = 36, 
		RULE_constantExpression = 37, RULE_argumentExpressionList = 38, RULE_compoundStatement = 39, 
		RULE_statement = 40, RULE_labeledStatement = 41, RULE_expressionStatement = 42, 
		RULE_selectionStatement = 43, RULE_iterationStatement = 44, RULE_forCondition = 45, 
		RULE_forDeclaration = 46, RULE_jumpStatement = 47, RULE_assignmentOperator = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "translationUnit", "functionDefinition", "declaration", 
			"declarationSpecifiers", "declarationSpecifier", "storageClassSpecifier", 
			"typeSpecifier", "typeQualifier", "typedefName", "structSpecifier", "structDeclarationList", 
			"structDeclaration", "initDeclaratorList", "initDeclarator", "declarator", 
			"directDeclarator", "pointer", "typeQualifierList", "parameterTypeList", 
			"parameterList", "parameterDeclaration", "initializer", "initializerList", 
			"expression", "assignmentExpression", "conditionalExpression", "logicalOrExpression", 
			"logicalAndExpression", "equalityExpression", "relationalExpression", 
			"additiveExpression", "multiplicativeExpression", "unaryExpression", 
			"unaryOperator", "postfixExpression", "primaryExpression", "constantExpression", 
			"argumentExpressionList", "compoundStatement", "statement", "labeledStatement", 
			"expressionStatement", "selectionStatement", "iterationStatement", "forCondition", 
			"forDeclaration", "jumpStatement", "assignmentOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'char'", "'short'", "'int'", "'long'", "'float'", "'double'", 
			"'signed'", "'unsigned'", "'struct'", "'typedef'", "'extern'", "'static'", 
			"'const'", "'if'", "'else'", "'while'", "'do'", "'for'", "'continue'", 
			"'break'", "'return'", "'goto'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
			"';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'++'", 
			"'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", 
			"'=='", "'!='", "'!'", "'&&'", "'||'", "'?'", "':'", "'&'", "'.'", "'->'", 
			"'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "CHAR", "SHORT", "INT", "LONG", "FLOAT", "DOUBLE", "SIGNED", 
			"UNSIGNED", "STRUCT", "TYPEDEF", "EXTERN", "STATIC", "CONST", "IF", "ELSE", 
			"WHILE", "DO", "FOR", "CONTINUE", "BREAK", "RETURN", "GOTO", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", 
			"SEMI", "COMMA", "ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "PLUS_PLUS", "MINUS_MINUS", "PLUS", "MINUS", 
			"STAR", "DIV", "MOD", "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
			"EQUAL", "NOT_EQUAL", "NOT", "AND_AND", "OR_OR", "QUESTION", "COLON", 
			"AND", "DOT", "ARROW", "ELLIPSIS", "Identifier", "Constant", "CharacterConstant", 
			"StringLiteral", "Whitespace", "LineComment", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CParser.EOF, 0); }
		public TranslationUnitContext translationUnit() {
			return getRuleContext(TranslationUnitContext.class,0);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152925902720499710L) != 0)) {
				{
				setState(98);
				translationUnit();
				}
			}

			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(105);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(103);
					functionDefinition();
					}
					break;
				case 2:
					{
					setState(104);
					declaration();
					}
					break;
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1152925902720499710L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public DeclarationSpecifiersContext declarationSpecifiers() {
			return getRuleContext(DeclarationSpecifiersContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(109);
				declarationSpecifiers();
				}
				break;
			}
			setState(112);
			declarator();
			setState(113);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationSpecifiersContext declarationSpecifiers() {
			return getRuleContext(DeclarationSpecifiersContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CParser.SEMI, 0); }
		public InitDeclaratorListContext initDeclaratorList() {
			return getRuleContext(InitDeclaratorListContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			declarationSpecifiers();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152925902720466944L) != 0)) {
				{
				setState(116);
				initDeclaratorList();
				}
			}

			setState(119);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationSpecifiersContext extends ParserRuleContext {
		public List<DeclarationSpecifierContext> declarationSpecifier() {
			return getRuleContexts(DeclarationSpecifierContext.class);
		}
		public DeclarationSpecifierContext declarationSpecifier(int i) {
			return getRuleContext(DeclarationSpecifierContext.class,i);
		}
		public DeclarationSpecifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationSpecifiers; }
	}

	public final DeclarationSpecifiersContext declarationSpecifiers() throws RecognitionException {
		DeclarationSpecifiersContext _localctx = new DeclarationSpecifiersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationSpecifiers);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(121);
					declarationSpecifier();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(124); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationSpecifierContext extends ParserRuleContext {
		public StorageClassSpecifierContext storageClassSpecifier() {
			return getRuleContext(StorageClassSpecifierContext.class,0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TypeQualifierContext typeQualifier() {
			return getRuleContext(TypeQualifierContext.class,0);
		}
		public DeclarationSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationSpecifier; }
	}

	public final DeclarationSpecifierContext declarationSpecifier() throws RecognitionException {
		DeclarationSpecifierContext _localctx = new DeclarationSpecifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarationSpecifier);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPEDEF:
			case EXTERN:
			case STATIC:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				storageClassSpecifier();
				}
				break;
			case VOID:
			case CHAR:
			case SHORT:
			case INT:
			case LONG:
			case FLOAT:
			case DOUBLE:
			case SIGNED:
			case UNSIGNED:
			case STRUCT:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				typeSpecifier();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				typeQualifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StorageClassSpecifierContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(CParser.TYPEDEF, 0); }
		public TerminalNode EXTERN() { return getToken(CParser.EXTERN, 0); }
		public TerminalNode STATIC() { return getToken(CParser.STATIC, 0); }
		public StorageClassSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storageClassSpecifier; }
	}

	public final StorageClassSpecifierContext storageClassSpecifier() throws RecognitionException {
		StorageClassSpecifierContext _localctx = new StorageClassSpecifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_storageClassSpecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14336L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeSpecifierContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(CParser.VOID, 0); }
		public TerminalNode CHAR() { return getToken(CParser.CHAR, 0); }
		public TerminalNode SHORT() { return getToken(CParser.SHORT, 0); }
		public TerminalNode INT() { return getToken(CParser.INT, 0); }
		public TerminalNode LONG() { return getToken(CParser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(CParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(CParser.DOUBLE, 0); }
		public TerminalNode SIGNED() { return getToken(CParser.SIGNED, 0); }
		public TerminalNode UNSIGNED() { return getToken(CParser.UNSIGNED, 0); }
		public StructSpecifierContext structSpecifier() {
			return getRuleContext(StructSpecifierContext.class,0);
		}
		public TypedefNameContext typedefName() {
			return getRuleContext(TypedefNameContext.class,0);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpecifier; }
	}

	public final TypeSpecifierContext typeSpecifier() throws RecognitionException {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeSpecifier);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(VOID);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(CHAR);
				}
				break;
			case SHORT:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(SHORT);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				match(INT);
				}
				break;
			case LONG:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				match(LONG);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				match(FLOAT);
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 7);
				{
				setState(139);
				match(DOUBLE);
				}
				break;
			case SIGNED:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				match(SIGNED);
				}
				break;
			case UNSIGNED:
				enterOuterAlt(_localctx, 9);
				{
				setState(141);
				match(UNSIGNED);
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 10);
				{
				setState(142);
				structSpecifier();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 11);
				{
				setState(143);
				typedefName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeQualifierContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(CParser.CONST, 0); }
		public TypeQualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeQualifier; }
	}

	public final TypeQualifierContext typeQualifier() throws RecognitionException {
		TypeQualifierContext _localctx = new TypeQualifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeQualifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(CONST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypedefNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CParser.Identifier, 0); }
		public TypedefNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedefName; }
	}

	public final TypedefNameContext typedefName() throws RecognitionException {
		TypedefNameContext _localctx = new TypedefNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typedefName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructSpecifierContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(CParser.STRUCT, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(CParser.LEFT_BRACE, 0); }
		public StructDeclarationListContext structDeclarationList() {
			return getRuleContext(StructDeclarationListContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(CParser.RIGHT_BRACE, 0); }
		public TerminalNode Identifier() { return getToken(CParser.Identifier, 0); }
		public StructSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structSpecifier; }
	}

	public final StructSpecifierContext structSpecifier() throws RecognitionException {
		StructSpecifierContext _localctx = new StructSpecifierContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_structSpecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(STRUCT);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(151);
				match(Identifier);
				}
			}

			setState(154);
			match(LEFT_BRACE);
			setState(155);
			structDeclarationList();
			setState(156);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclarationListContext extends ParserRuleContext {
		public List<StructDeclarationContext> structDeclaration() {
			return getRuleContexts(StructDeclarationContext.class);
		}
		public StructDeclarationContext structDeclaration(int i) {
			return getRuleContext(StructDeclarationContext.class,i);
		}
		public StructDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclarationList; }
	}

	public final StructDeclarationListContext structDeclarationList() throws RecognitionException {
		StructDeclarationListContext _localctx = new StructDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_structDeclarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158);
				structDeclaration();
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921504606879742L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
